# hashall

./: .bumpver.toml  .gitignore  .gitmodules  AGENTS.md  Dockerfile  INIT.md  JOB-QUEUE.md  Makefile  OPS.md  QUICKSTART.md  README.md  REPO-MASTERY.md  SESSION.md  TODO.md  analyze_hashes.py  bench-fast-hash-workers.py  db_migration.py  docker-compose.yml  filehash_tool.py  hashall-auto-scan  hashall-plan-scan  hashall-smart-scan  hashall-tune-presets  iowatch  json_export.py  pyproject.toml  requirements.txt  run-hiker.sh  scan_session.py  schema.sql  test-collision-detection.py  watch-hiker-stats.sh
.gpt/: linex-hashall-001-19Jun25-hashall-json-scan-b2d406.md  trail.yaml
.setup/: bootstrap-hashall.sh
archive/: filehash_tool.py
benchmarks/: README.md  RESULTS_SUMMARY.md  TASK_19_COMPLETION.md  bench-fast-hash-workers-io.py  bench_incremental.py  bench_presets.py  bench_results_20260201_122052.txt  scan_performance.md  scan_performance_codebase.md
docs/: AGENT-MASTERY.md  ARCHITECTURE.md  BACKLOG.md  CANONICAL-PATH-SPEC.md  CANONICAL-PATH-TREE-DRAFT.md  CROSS-REPO-QB-HELPER-INSTRUCTIONS.md  DEVLOG.md  GATE0-STOPPDL-AUDIT.md  GATE0-T02-REPAIR.md  HANDOFF-2026-02-22-FULL-CONTEXT-REPAIR.md  J25-AUDIT-REPORT.md  LANE1-PILOT-RCCA.md  NEXT-AGENT-PROMPT.md  OP-INVESTIGATE-GRAMMAR-BREAK.md  OP-REPAIR-GRAMMAR-QB.md  OPS.md  RCCA-GRAMMAR-BREAK.md  RCCA-J38-PATH-AUDIT.md  RCCA-MAIN-MERGE-INCIDENT.md  RCCA-RT-LEECHING-INCIDENT.md  RCCA-SETLOCATION-FNF.md  README.md  RECOVERY.md  REFRESH_GUIDE.md  REHOME.md  REMOTE-PREAMBLE.md  REQUIREMENTS.md  RT-QB-STATE-POLICY.md  RTM.md  (+36 more)
(+442 files in other folders)
